# B-G101.github.io

./: .breakpoints  .replit  create_task.md  data_structure.md  index.md  paint.md  pyproject.toml  readme.md  temp  test_prep.md
_includes/: navigation.html
mini_labs/: menu.py  menu2.py  tt1.py
mini_labs/week2/: factorial.py  factors.py  fibonacci.py  palidrone.py
