[tool.poetry]
name = "repl_python3_B-G101githubio-1"
version = "0.1.0"
description = ""
authors = ["BG101 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
patterns = "^0.3"
mathpy = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
